[tool.black]
line-length = 120

[tool.poetry]
name = "banws"
version = "0.1.1"
description = "small websocket proxy for a banano node"
authors = ["Eulentier <git@eule.wtf>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
websockets = "^12.0"
cachetools = "^5.3.3"
typer = { version = "^0.12.1", extras = ["all"] }
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[tool.poetry.scripts]
banws = "banws.run:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
