[project]
name = "banws"
version = "0.1.1"
description = "small websocket proxy for a banano node"
authors = [{ name = "Eulentier", email = "git@eule.wtf" }]
requires-python = ">=3.12,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "httpx>=0.27.0,<0.28",
    "websockets>=12.0,<13",
    "cachetools>=5.3.3,<6",
    "typer[all]>=0.12.1,<0.13",
    "python-dotenv>=1.0.1,<2",
]

[project.scripts]
banws = "banws.run:app"

[tool.black]
line-length = 120

[dependency-groups]
dev = ["black>=24.3.0,<25"]

[tool.uv]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
